# jackbox-custom-content

./: .gitignore  Cargo.toml  LICENSE  Readme.md  TODO.txt  jppc.py  research.txt  sample_custom_content.json  sample_custom_content_to_import.json
src/: build.rs  com.ambiguousname.JackboxCustomContent.gschema.xml  config.rs  content.rs  main.rs  quiplash3.rs  resources.gresource.xml  settings.ini  util.rs
src/content/: content.gresource.xml  content_list.ui  game.ui  game_list.rs  game_list.ui  mod.rs  quiplash3.rs  subcontent_loader.rs
src/content/quiplash3/: mod.rs  safety_quip.rs
src/content/quiplash3/categories/: generic_round_prompt.ui  mod.rs  prompt_util.rs  round_prompt.rs  round_prompt.ui  safety_quip.rs
src/content/quiplash3/prompts/: generic_round_prompt.ui  mod.rs  prompt_util.rs  round_prompt.ui  round_prompt.xml
src/content/subcontent/: content_folder.rs  manifest.rs  mod.rs  subfolder.rs
src/mod_config/: mod.rs
src/mod_manager/: content_data.rs  mod.rs  mod_data.rs  mod_store.rs  mod_store.ui
src/templates/: contentcol.rs  contentobj.rs  contentrow.rs  editable_list.rs  editable_list.ui  filebrowse.rs  filebrowse.ui  mainmenu.rs  mod.rs  resources.gresource.xml  selector.rs
src/templates/content/: contentcol.rs  contentobj.rs  mod.rs
src/templates/content_creation/: mod.rs
src/templates/content_util/: entry.rs  form.rs  form_checkbox.rs  form_filebrowse.rs  form_filebrowse.ui  form_manager.rs  labelled_box.rs  labelled_box.ui  labelled_entry.rs  labelled_entry.ui  mod.rs
src/templates/mainmenu/: folder_selection.rs  mainmenu.ui  mod.rs  mod_editor.rs
src/templates/mainmenu/content_creation/: content.ui  content_creation.ui  game.ui  game_list.rs  (+2 more)
src/templates/preferences/: mod.rs  preferences.ui
src/templates/resources/: resources.gresource.xml
src/util/: mod.rs  template_macro.rs
src/widgets/: filebrowse.ui  mod.rs
(+8 files in other folders)
