[package]
name = "jackbox-custom-content"
version = "2.0.0"
description = "Mod creation for Jackbox Party Pack 7"
edition = "2021"
build = "src/build/build.rs"
readme = "README"
license-file="LICENSE"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0.1"

[build-dependencies]
glib-build-tools = "0.17.0"
regex = "1.10.2"
